# anonymous-artifact

./: CMakeLists.txt  README.md
data/: README.md
experiments/: CiaoDVD_overall_main.cpp  Full_two_Stage_fusion.cpp  KuaiRand_industrial_validation.cpp  Stage1_only.cpp  Stage2_1v1_oversampling.cpp  Stage2_2v2_oversampling.cpp  Stage2_Basic_1v1.cpp  sift1m_overall_main.cpp
include/: binary_io.hpp  group_task_eval.h  retrieval_framework.hpp  stimer.hpp  vector_ops.hpp
scripts/: prepare_kuairand1k_itemgraph_ctr.py  preprocess_ciaodvd.py
